--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@turf/turf": "^5.1.6",
+    "@types/jquery": "^3.3.36",
     "bootstrap-vue": "^2.12.0",
     "core-js": "^3.6.4",
     "d3": "^5.16.0",
+    "jquery": "^3.5.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.1"
