--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@turf/nearest-point-to-line": "^6.0.0",
+    "@turf/point-to-line-distance": "^6.0.0",
     "@turf/turf": "^5.1.6",
     "@types/jquery": "^3.3.36",
     "bootstrap-vue": "^2.12.0",
