--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.4",
     "d3": "^5.16.0",
     "jquery": "^3.5.0",
+    "typeface-uncial-antiqua": "0.0.71",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.1"
