--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "d3": "^5.16.0",
     "d3-tip": "^0.9.1",
     "jquery": "^3.5.0",
+    "timelinejs": "^2.35.6",
     "typeface-uncial-antiqua": "0.0.71",
     "vue": "^2.6.11",
     "vue-bootstrap-typeahead": "^0.2.6",
